Fix image alignment

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -169,30 +169,30 @@ body {
         display: flex;
         flex-direction: column;
         gap: 10rem;
+        align-items: center;
 
         .bigImage {
           display: grid;
-          grid-template-columns: 1fr auto 3rem;
-          grid-template-rows: 1fr auto 3rem;
+          grid-template-rows: 66dvh;
+          grid-template-areas: "main";
           justify-items: end;
-          max-height: 66dvh;
-          position: relative;
-          picture {
+          & picture {
+            grid-area: main;
             img {
               width: 100%;
               height: 100%;
               object-fit: contain;
               overflow: hidden;
             }
-            grid-row: 1 / 3;
-            grid-column: 1 / 3;
           }
-
+          
           & .description {
+            grid-area: main;
             color: #fff;
             background-color: #000a;
-            grid-row: 2 / 4;
-            grid-column: 2 / 4;
+            grid-area: main;
+            margin: -3rem;
+            align-self: end;
             padding: 1rem;
             border: 0.3rem solid #fff;
           }
